--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
     "@coreui/utils": "^2.0.2",
     "chart.js": "^4.4.3",
     "lodash-es": "^4.17.21",
+    "ng2-charts": "^6.0.1",
+    "ngx-charts": "^3.0.2",
+    "ngx-papaparse": "^8.0.0",
     "ngx-scrollbar": "^13.0.3",
     "rxjs": "~7.8.1",
     "tslib": "^2.6.3",
