--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "scripts": {
     "ng": "ng",
-    "start": "ng serve -o",
+    "start": "ng serve --host 0.0.0.0 --port 4200 -o",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
