--- a/package.json
+++ b/package.json
@@ -36,13 +36,16 @@
     "@coreui/icons": "^3.0.1",
     "@coreui/icons-angular": "~5.2.3",
     "@coreui/utils": "^2.0.2",
+    "@stomp/ng2-stompjs": "^8.0.0",
+    "@stomp/stompjs": "^7.0.0",
     "chart.js": "^4.4.3",
+    "coreui-free-angular-admin-template": "file:",
     "lodash-es": "^4.17.21",
     "ng2-charts": "^6.0.1",
-    "ngx-charts": "^3.0.2",
     "ngx-papaparse": "^8.0.0",
     "ngx-scrollbar": "^13.0.3",
     "rxjs": "~7.8.1",
+    "sockjs-client": "^1.6.1",
     "tslib": "^2.6.3",
     "zone.js": "~0.14.7"
   },
@@ -54,6 +57,7 @@
     "@types/jasmine": "^5.1.4",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^20.14.9",
+    "@types/sockjs-client": "^1.5.4",
     "jasmine-core": "^5.1.2",
     "karma": "^6.4.3",
     "karma-chrome-launcher": "^3.2.0",
