--- a/package.json
+++ b/package.json
@@ -38,13 +38,15 @@
     "@coreui/utils": "^2.0.2",
     "@stomp/ng2-stompjs": "^8.0.0",
     "@stomp/stompjs": "^7.0.0",
-    "chart.js": "^4.4.3",
+    "chart.js": "^4.4.4",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "coreui-free-angular-admin-template": "file:",
     "lodash-es": "^4.17.21",
     "ng2-charts": "^6.0.1",
     "ngx-papaparse": "^8.0.0",
     "ngx-scrollbar": "^13.0.3",
     "rxjs": "~7.8.1",
+    "socket.io-client": "^4.7.5",
     "sockjs-client": "^1.6.1",
     "tslib": "^2.6.3",
     "zone.js": "~0.14.7"
