--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@coreui/utils": "^2.0.2",
     "@stomp/ng2-stompjs": "^8.0.0",
     "@stomp/stompjs": "^7.0.0",
+    "@swimlane/ngx-charts": "^20.5.0",
     "chart.js": "^4.4.4",
     "chartjs-plugin-datalabels": "^2.2.0",
     "coreui-free-angular-admin-template": "file:",
